--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
 }
 
 header{
-  height: 90px;
-  background: #2f3640;
+  height: 121px;
+  background: #838386;
 }
 
 .inner-width{
@@ -22,7 +22,8 @@ header{
 }
 
 .logo img{
-  height: 50px;
+    height: 117px;
+    margin-top: -20px;
 }
 
 .navigation-menu{
@@ -33,12 +34,12 @@ header{
 }
 
 .navigation-menu a{
-  margin-left: 10px;
-  color: #ddd;
+  margin-left: 20px;
+  color: #121010;
   text-transform: uppercase;
   font-size: 14px;
-  padding: 12px 20px;
-  border-radius: 4px;
+  padding: 14px 23px;
+  border-radius: 6px;
   transition: .3s linear;
 }
 
